# OpenSpliceDDS-playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindOpenSplice.cmake  MacroOpenSplice.cmake  gSoapInstaller.cmake  gitModules.cmake  onvifGenerator.cmake
src/: Makefile  cameraDDS.hpp  inputLister.hpp  joystickDDS.hpp  publisher.cpp  subscriber.cpp
src/models/: JoystickData.idl
src/onvif/: OnvifDevice.hpp  OnvifMedia.hpp  OnvifPTZ.hpp
